# urt30discord

./: .pre-commit-config.yaml  README.md  pyproject.toml  run_checks.sh
etc/: urt30discord.toml
etc/systemd/: urt30discord.service
tests/: __init__.py  test_config.toml  test_mapcycle.py  test_mapfiles.py
tests/q3ut4/: mapcycle.txt
urt30discord/: __init__.py  __main__.py  commands.py  core.py  gameinfo.py  main.py  mapcycle.py  mapfiles.py  settings.py
