[project]
name = "urt30discord"
version = "1.0.0"
description = "|30+| UrT Discord Bot"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "aiofiles>=25.1.0",
    "brotli>=1.2.0",
    "discord.py[speed]>=2.7.1",
    "pydantic>=2.12.5",
    "tzdata>=2025.3; sys_platform == 'win32'",
    "urt30arcon>=2.1.0",
    "uvloop>=0.22.1; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ty>=0.0.27",
    "types-aiofiles>=25.1.0",
    "watchfiles>=1.1.1",
]

[tool.ruff]
target-version = "py314"
extend-exclude = [".*", "temp"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    "A",  # shadowing builtins
    "ARG",  # unused arguments
    "ASYNC",  # async checks
    "B",  # bugbear
    "C4",  # comprehensions
    "DTZ",  # checks for naive datetimes
    "E",  # pycodestyle (errors)
    "ERA",  # eradicate (commented out code)
    "F",  # Pyflakes
    "FBT",  # boolean trap
    "FURB",  # refurb
    "I",   # isort
    "ISC",  # Implicit String Concat
    "LOG",  # logging checks
    "N",  # pep8-naming
    "PIE",  # misc lints
    "PL",  # Pylint
    "PT",  # Pytest
    "PTH",  # favor pahtlib.Path
    "RET",  # returns
    "RUF",  # Ruff-specific rules
    "S",  # bandit
    "SIM",  # simplify
    "T20",  # print statements
    "TC",  # type checking
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # pycodestyle (warnings)
]
ignore = ["ASYNC109", "ISC001", "TC002", "TC003"]
